# forgesigner

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md
examples/: .gitignore  build_onnx.sh  create_onnxcheckpoint_for_single_pixel_model.py  example.py  explore_onnx_raw_output.py  get_input_and_output_names_from_onnx_file.cpp  main.cpp
src/: ImageViewer.cpp  ImageViewer.h  InitialHintProvider.cpp  InitialHintProvider.h  MainWindow.cpp  MainWindow.h  Sidebar.cpp  Sidebar.h  SignatureTargetWidget.cpp  SignatureTargetWidget.h  main.cpp
